--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Siimple Bootstrap Template</title>
+  <title>Index - Evolved Materials</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -86,8 +86,8 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome to Siimple</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <h2>Welcome an Evolved Materials project</h2>
+            <p>We are team of talented business developers making an Evolved Materials world</p>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
