--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome an Evolved Materials project</h2>
-            <p>We are team of talented business developers making an Evolved Materials world</p>
+            <h2>Welcome to an Evolved Materials project</h2>
+            <p>We are a team of talented business developers making an Evolved Materials world</p>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
