--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Siimple</h1>
+        <h1 class="sitename">EvolvedMaterials</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -88,7 +88,7 @@
           <div class="col-lg-8">
             <h2>Welcome to an Evolved Materials project</h2>
             <p>Evolved Materials is a holistic vision connected to lives built in connection with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you.</p>
-            <h2>We are a team of talented business developers making an Evolved Materials world</h2>
+            <h1>We are a team of talented business developers making an Evolved Materials world</h1>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
