--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+        <!--  <li><a href="#about">About</a></li> -->
          <!-- <li><a href="#why-us">Why Us</a></li> -->
-          <li><a href="#services">Services</a></li>
+         <!-- <li><a href="#services">Services</a></li> -->
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
