--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+   <!-- Button to display sections   <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class=""> -->
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
