--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-   <!-- Button to display sections   <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class=""> -->
+    <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
@@ -95,7 +95,7 @@
         </div>
       </div>
 
-    </section><!-- /Hero Section -->
+   <!-- SECTIONS  </section><!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -285,7 +285,7 @@
       </div>
 
     </section><!-- /Services Section -->
-
+-->
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
