--- a/index.html
+++ b/index.html
@@ -88,14 +88,17 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2>Welcome to an Evolved Materials project</h2>
-            <p>Evolved Materials is a holistic vision connected to lives built in harmony with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you.</p>
+            <p>
+              Evolved Materials is a holistic vision connected to lives built in harmony with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you.
+            </p>
             <h1>We are a team of talented business developers making an Evolved Materials world</h1>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
       </div>
 
-    </section><!-- /Hero Section -->
+   <!--
+    </section> <!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
@@ -386,6 +389,7 @@
       </div>
     </div>
   </footer>
+  -->
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
