--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--  <li><a href="#about">About</a></li> -->
          <!-- <li><a href="#why-us">Why Us</a></li> -->
          <!-- <li><a href="#services">Services</a></li> -->
-          <li><a href="#contact">Contact</a></li>
+       <!--   <li><a href="#contact">Contact</a></li> -->
          <!--  <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
              <li><a href="#">Dropdown 1</a></li>
@@ -97,8 +97,9 @@
 
   <footer id="footer" class="footer light-background">
     <div class="container">
-      <h3 class="sitename">Siimple</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">EvolvedMaterials</h3>
+     <!-- 
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> 
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
@@ -106,6 +107,7 @@
         <a href=""><i class="bi bi-skype"></i></a>
         <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
+      -->
       <div class="container">
         <div class="copyright">
           <span>Copyright</span> <strong class="px-1 sitename">Siimple</strong> <span>All Rights Reserved</span>
