--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       -->
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Siimple</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">EvolvedMaterials</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
