--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
       -->
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">EvolvedMaterials</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">EvolvedMaterialsLLC</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="">EvolvedMaterials</a>
+          Designed by <a href="">EvolvedMaterialsLLC</a>
         </div>
       </div>
     </div>
