--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
+            <a href="" class="logo d-flex align-items-center">
             <h1 class="sitename">Welcome to an Evolved Materials project</h1>
             <p>
-             <h1 class="sitename"> 
+             <h2> 
                Evolved Materials is a holistic vision connected to lives built in harmony with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you.
-            </h1>
+            </h2>
             </p>
             <h1 class="sitename"> 
             <p>
               We are a team of talented business developers making an Evolved Materials world.
             </p>
             </h1>
+            </a>
             </div>
 
   </main>
