--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
 
           <ul class="navbar-nav d-flex flex-row">
-            <!-- Icons -->
+            <!-- Icons 
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="" rel="nofollow"
                 target="_blank">
@@ -60,6 +60,7 @@
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="" rel="nofollow" target="_blank">
                 <i class="fab fa-github"></i>              </a>            </li>
+          -->
           </ul>
         </div>
       </div>
