--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1 class="mb-3">EvolvedMaterials</h1>
 
             <!-- Time Counter -->
-            <p> Home Welcome to an Evolved Materials project Evolved Materials is a holistic vision connected to lives built in harmony with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you. </p>
+            <p> Welcome to an Evolved Materials project with a holistic vision connected to lives built in harmony with sustainable elements. Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, what kind of kitchen utensils do you use for your breakfast, what kind of materials you choose for the world you're creating around you. </p>
 
             <p>&nbsp;</p>
 
