--- a/index.html
+++ b/index.html
@@ -84,6 +84,33 @@
               rel="nofollow" target="_blank"></a></div>
         </div>
       </div>
+                      <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white px-4" data-mdb-theme="dark">
+            <h1 class="mb-3">The vision</h1>
+
+            <!-- VISION -->
+            <p> To help build a lifestyle where daily choices harmonize with sustainable living, fostering a world where every interaction with our environment reflects ecological balance. </p>
+
+            <p>&nbsp;</p>
+
+        <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
+              rel="nofollow" target="_blank"></a></div>
+        </div>
+      </div>
+
+                      <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white px-4" data-mdb-theme="dark">
+            <h1 class="mb-3">The mission</h1>
+
+            <!-- MISION -->
+            <p> To support products made from sustainable materials, enriching life with eco-friendly alternatives to create a world that aligns with the values of sustainability. </p>
+
+            <p>&nbsp;</p>
+
+        <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
+              rel="nofollow" target="_blank"></a></div>
+        </div>
+      </div>
     </div>
     <!-- Background image -->
 </header>
@@ -155,7 +182,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
+      © 2024 Copyright:
       Evolved Materials LLC    </div>
     <!-- Copyright -->
   </footer>
