--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
               rel="nofollow" target="_blank"></a></div>
         </div>
       </div>
-                      <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">        
+              <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white px-4" data-mdb-theme="dark">
             <h1 class="mb-3">The vision</h1>
 
@@ -97,8 +98,9 @@
               rel="nofollow" target="_blank"></a></div>
         </div>
       </div>
-
-                      <div class="d-flex justify-content-center align-items-center h-100">
+    </div>
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white px-4" data-mdb-theme="dark">
             <h1 class="mb-3">The mission</h1>
 
@@ -112,6 +114,7 @@
         </div>
       </div>
     </div>
+              </div>
     <!-- Background image -->
 </header>
   <!--Main Navigation-->
