--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
               rel="nofollow" target="_blank"></a></div>
-        </div>
+        </div> -->
       </div>
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">        
               <div class="d-flex justify-content-center align-items-center h-100">
@@ -96,7 +96,7 @@
 
         <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
               rel="nofollow" target="_blank"></a></div>
-        </div>
+        </div>-->
       </div>
     </div>
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
