--- a/index.html
+++ b/index.html
@@ -84,36 +84,22 @@
               rel="nofollow" target="_blank"></a></div>
         </div> -->
       </div>
-              <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">        
-              <div class="d-flex justify-content-center align-items-center h-100">
+   <div id="intro" class="p-5 text-center bg-image shadow-1-strong"
+      style="background-image: url('https://mdbootstrap.com/img/new/slides/205.jpg');">
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white px-4" data-mdb-theme="dark">
             <h1 class="mb-3">The vision</h1>
 
-            <!-- VISION -->
-            <p> To help build a lifestyle where daily choices harmonize with sustainable living, fostering a world where every interaction with our environment reflects ecological balance. </p>
+            <!-- Time Counter -->
+            <p> To focus on materials that provide choices in harmony with sustainable living and ecological balance </p>
 
             <p>&nbsp;</p>
 
-        <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
-              rel="nofollow" target="_blank"></a></div>
-        </div>-->
+          </div>-->
       </div>
     </div>
-    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white px-4" data-mdb-theme="dark">
-            <h1 class="mb-3">The mission</h1>
-
-            <!-- MISION -->
-            <p> To support products made from sustainable materials, enriching life with eco-friendly alternatives to create a world that aligns with the values of sustainability. </p>
-
-            <p>&nbsp;</p>
-
-        <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
-              rel="nofollow" target="_blank"></a></div>
-        </div>
-      </div>
-    </div>
+    
               </div>
     <!-- Background image -->
 </header>
