--- a/index.html
+++ b/index.html
@@ -77,31 +77,10 @@
 
             <!-- Time Counter -->
             <p> In the coming weeks an Evolved Materials project will be launched, with a holistic vision connected to lives built in harmony with sustainable elements. </p> <p>Since we wake up every day, we start interacting with the world we have shaped for us: your toothbrush, toothpaste the soap or shampoo, the kitchen utensils do you use for your breakfast, the materials you choose for the world you're creating around you. </p>
-
+ <p><strong>The vision: </strong></p>
+            <p>To focus on materials that provide choices in harmony with sustainable living and ecological balance</p>
             <p>&nbsp;</p>
-<p>&nbsp;</p>
-              <p>&nbsp;</p>
-        <!--   <a class="btn btn-outline-light btn-lg m-2" href="" role="button" data-mdb-ripple-init
-              rel="nofollow" target="_blank"></a></div>
-        </div> -->
-      </div>
-   <div id="intro" class="p-5 text-center bg-image shadow-1-strong"
-      style="background-image: url('https://mdbootstrap.com/img/new/slides/205.jpg');">
-      <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white px-4" data-mdb-theme="dark">
-            <h1 class="mb-3">The vision</h1>
-
-            <!-- Time Counter -->
-            <p> To focus on materials that provide choices in harmony with sustainable living and ecological balance </p>
-
             <p>&nbsp;</p>
-
-          </div>-->
-      </div>
-    </div>
-    
-              </div>
     <!-- Background image -->
 </header>
   <!--Main Navigation-->
