--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
  <p><strong>The vision: </strong></p>
             <p>To focus on materials that provide choices in harmony with sustainable living and ecological balance</p>
             <p>&nbsp;</p>
+              <p><strong>The mission: </strong></p>
+            <p>To support products made from sustainable materials, enriching life with   eco-friendly alternatives to create a world that aligns with the values   of sustainability</p>
+            <p>&nbsp;</p>
             <p>&nbsp;</p>
     <!-- Background image -->
 </header>
